fix rotation on iPhone

--- a/projects/cssgyro/index.4.css
+++ b/projects/cssgyro/index.4.css
@@ -134,6 +134,7 @@ body {
   height: 80vmin;
   border-radius: 50%;
   transition: transform 0.05s;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   display: flex;
   align-items: center;
